# TkFontAwesome

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
development/: demo.py  demov6.py  test.py
src/tkfontawesome/: __init__.py
svgs/: consolidate.py
tkfontawesome/: __init__.py  svgs.py
tkfontawesome/svgs/: consolidate.py
