[project]
name = "tkfontawesome"
version = "0.2.1"
authors = [{name = "Israel Dryer", email = "israel.dryer@gmail.com"}]
description ="Use any of the 2k+ free FontAwesome icons in your tkinter application."
keywords = ["svg", "fontawesome", "icons", "tkinter", "ttk"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "lxml==5.1.0",
    "tksvg==0.7.4"
]

[project.urls]
Homepage = "https://github.com/israel-dryer/tkfontawesome"
Repository = "https://github.com/israel-dryer/tkfontawesome"
Issues = "https://github.com/israel-dryer/tkfontawesome/issues"

[build-system]
requires = ["setuptools", "scikit-build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tkfontawesome"]